2005-11-21  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (cdtparser.jar): Dump files into classdir.
	(classdir): Run $(GCJ) in source directory.

2005-11-21  Rick Moseley  <rmoseley@redhat.com>
	* Makefile.am: get file list for "gcj" command from a file
	* file.list: list of files to compile so everyone has the same order

2005-11-21  Rick Moseley  <rmoseley@redhat.com>
	* Makefile.am:  added more generic searching for .class files
			added some info for the "make clean" command

2005-11-18  Rick Moseley  <rmoseley@redhat.com>
	* configure.ac: remove for cdtparser complie integration
	* autogen.sh: Ditto

2005-11-16  Rick Moseley  <rmoseley@redhat.com>

	* cdtparser/org/eclipse/cdt/core/dom/ast/ASTTypeUtil.java: Hack around GCJ
			bug # 172853 Inner interface's are not know inside
			packages
	* cdtparser/org/eclipse/cdt/core/dom/ast/ASTTypeUtil.java: Ditto.
        * cdtparser/org/eclipse/cdt/core/dom/ast/c/ICBasicType.java: Ditto.
        * cdtparser/org/eclipse/cdt/internal/core/dom/parser/c/CASTEnumerationSpecifier.java: Ditto.
        * cdtparser/org/eclipse/cdt/internal/core/dom/parser/c/CASTTranslationUnit.java: Ditto.
        * cdtparser/org/eclipse/cdt/internal/core/dom/parser/cpp/CPPASTCompositeTypeSpecifier.java: Ditto.
        * cdtparser/org/eclipse/cdt/internal/core/dom/parser/cpp/CPPASTEnumerationSpecifier.java: Ditto.
        * cdtparser/org/eclipse/cdt/internal/core/dom/parser/cpp/CPPASTTranslationUnit.java: Ditto.
        * cdtparser/org/eclipse/cdt/internal/core/parser/GCCParserExtension.java: Ditto.
        * cdtparser/org/eclipse/cdt/internal/core/parser/Parser.java: Ditto.
        * cdtparser/org/eclipse/cdt/internal/core/parser/ast/ASTCompletionNode.java: Ditto.
        * cdtparser/org/eclipse/cdt/internal/core/parser/ast/ASTDesignator.java: Ditto.
        * cdtparser/org/eclipse/cdt/internal/core/parser/ast/complete/ASTBinaryExpression.java: Ditto.